# uffutils

./: .gitignore  README.md  pyproject.toml
.github/workflows/: python-package.yml  python-publish.yml
.sublime/: uffutils.sublime-project  uffutils.sublime-workspace
scripts/: format.ps1  test.ps1  tests.sh
scripts/experiments/: rotmat.py
tests/: test_e2e.py  test_uff.py  test_uffdata.py  test_uffutils.py
tests/data/: __init__.py  subset.uff  subset_rotated.uff
uffutils/: __init__.py  cli.py  file.py  nodes.py  subset.py  uff.py  view.py
uffutils/uff/: dataset.py  rotatemap.py  subsetmap.py  uffdata.py
