[project]
name = "uffutils"
version = "0.1.0"
description = ""
authors = [
    {name = "Jan Hein de Jong",email = "jhdejong@vibestechnology.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = ["pyuff (>=2.4.5,<3.0.0)", "click (>=8.1.8,<9.0.0)"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.group.dev.dependencies]
pytest = "^8.3.4"
ruff = "^0.9.1"

