[project]
name = "uffutils"
version = "0.5.0"
description = "A set of commandline tools for manipulating UFF files."
authors = [{ name = "Jan Hein de Jong", email = "janhein.dejong@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dependencies = [
    "pyuff (>=2.4.6,<3.0.0)",
    "click (>=8.1.8,<9.0.0)",
]
classifiers = [
    "Development Status :: 3 - Alpha", 
    "Environment :: Console",
    "Intended Audience :: Manufacturing", 
    "License :: OSI Approved :: MIT License", 
    "Topic :: Scientific/Engineering", 
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13"
]

[project.urls]
Homepage = "https://github.com/janheindejong/uffutils"
Repository = "https://github.com/janheindejong/uffutils"

[project.scripts]
uffutils = "uffutils.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.4,<9",
    "ruff>=0.9.1,<0.10",
    "mypy>=1.14.1,<2",
    "black>=24.10.0,<25",
    "ipython>=9.4.0",
    "matplotlib>=3.10.3",
    "scipy>=1.16.0",
]

[tool.ruff]
extend-exclude = ["data"]

[tool.ruff.lint]
select = ["E", "F", "B", "I"]
extend-ignore = ["B008"]
